k8s4jdev/postgres-host-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db-svc
  namespace: k8s4jdev
spec: 
  type: ExternalName
  externalName: host.minikube.internal
  ports:
    - port: 5432
      protocol: TCP
